<resources>
    <string name="app_name">GlucoDataHandler</string>


    <string name="tasker_event_glucodata">New glucose value</string>
    <string name="tasker_event_glucodata_obsolete">Obsolete value</string>
    <string name="tasker_event_glucodata_alarm">Glucose alarm</string>
    <string name="tasker_wear_connection_state">Wear connection</string>
    <string name="tasker_android_auto_connection_state">Android Auto connection</string>
    <string name="tasker_target_range_state">Glucose range change</string>

    <string name="glucose_label">Glucose</string>
    <string name="glucose_html_label">Glucose value in unit from Juggluco settings</string>
    <string name="sensor_id_label">Sensor ID</string>
    <string name="sensor_id_html_label">ID of the current active Sensor</string>
    <string name="raw_value_label">Raw Value</string>
    <string name="raw_value_html_label">Glucose value in mg/dl</string>
    <string name="rate_label">Rate</string>
    <string name="rate_html_label">Rate of change of glucose</string>
    <string name="rate_label_label">Rate Label</string>
    <string name="rate_label_html_label">Label for current rate</string>
    <string name="dexcom_label">DexcomLabel</string>
    <string name="dexcom_html_label">Rate label for Dexcom</string>
    <string name="alarm_label">Alarm</string>
    <string name="alarm_html_label">Alarm value (0: no alarm, 6/14: high, 7/15: low)</string>
    <string name="time_label">Time</string>
    <string name="time_html_label">Time in msec</string>
    <string name="time_diff_label">TimeDiff</string>
    <string name="time_diff_html_label">Time difference between this and the previous value in msec</string>
    <string name="arrow_label">Arrow</string>
    <string name="arrow_html_label">Unicode arrow of the direction</string>
    <string name="delta_label">Delta</string>
    <string name="delta_html_label">Delta of current and previous glucose value (per minute)</string>
    <string name="unit_label">Unit</string>
    <string name="unit_html_label">Unit of the glucose value (mg/dl or mmol/l)</string>
    <string name="obsolete_time_label">Time since last value</string>
    <string name="obsolete_time_html_label">Time in minutes (5 or 10) since last value was received.</string>

    <string name="activity_main_connected_label">Wear: connected (%1$s)</string>
    <string name="activity_main_disconnected_label">Wear: disconnected</string>
    <string name="activity_main_car_connected_label">Android Auto: connected</string>
    <string name="activity_main_car_disconnected_label">Android Auto: disconnected</string>

    <string name="pref_cat_general">General</string>
    <string name="pref_cat_notification">Notification</string>
    <string name="pref_cat_widgets">Widgets</string>
    <string name="pref_cat_android_auto">Android Auto</string>
    <string name="pref_cat_xdrip">xDrip+</string>
    <string name="pref_cat_forward_broadcast">Glucodata broadcast</string>
    <string name="pref_target_range">Target range</string>
    <string name="pref_cat_colors">Colors</string>

    <string name="pref_switch_notification">Dummy values</string>
    <string name="pref_high_value">High glucose</string>
    <string name="pref_high_value_summary">Border for high glucose values.\nIf you have activated high alarm in Juggluco, you do not have to set this value.</string>
    <string name="pref_target_max_value">Target top glucose</string>
    <string name="pref_target_max_value_summary">Top value for the target range.</string>
    <string name="pref_target_min_value">Target bottom glucose</string>
    <string name="pref_target_min_value_summary">Bottom value for the target range.</string>
    <string name="pref_low_value">Low glucose</string>
    <string name="pref_low_value_summary">Border for low glucose values.\nIf you have activated low alarm in Juggluco, you do not have to set this value.</string>
    <string name="pref_switch_car_notification">Android Auto notifications</string>
    <string name="pref_switch_car_notification_summary">Notification for Android Auto.\nFor using this app in Android Auto, you have to activate developer settings in Android Auto by clicking several times on the version. Then you have to enable "Unknown sources" in the developer settings menu.</string>
    <string name="pref_switch_car_media">Dummy Media Player</string>
    <string name="pref_switch_car_media_summary">Show the glucose value as current song for Android Auto.</string>
    <string name="pref_switch_send_to_aod">Send glucodata broadcast</string>
    <string name="pref_switch_send_to_aod_summary">Send glucodata broadcast for new values received from any source.</string>
    <string name="pref_button_select_target">Identify receiver</string>
    <string name="pref_button_select_target_summary">Choose receivers sending the glucodata broadcast to. A global broadcast will send to every app registering dynamically on the broadcast.</string>
    <string name="pref_switch_send_to_xdrip">Send to xDrip</string>
    <string name="pref_switch_send_to_xdrip_summary">Forward glucose values to xDrip+.\nIMPORTANT: this must be off to receive values from xDrip+!</string>
    <string name="pref_switch_use_mmol">Use mmol/l</string>
    <string name="pref_switch_use_mmol_summary">Convert values from xDrip+ to mmol/l.</string>
    <string name="pref_switch_use_5_min_delta">5 minute delta</string>
    <string name="pref_switch_use_5_min_delta_summary">Switch this on to use delta values for 5 minute interval, otherwise 1 minute interval is used.</string>
    <string name="pref_color_alarm">High/low color</string>
    <string name="pref_color_alarm_summary">Color for high and low glucose values.</string>
    <string name="pref_color_out_of_range">Out of range color</string>
    <string name="pref_color_out_of_range_summary">Color for glucose values out of the target range.</string>
    <string name="pref_color_ok">Target color</string>
    <string name="pref_color_ok_summary">Color for glucose values in the target range.</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_notification_summary">Shows a permanent notification with the current trend arrow, glucose and delta value in the status bar.\nThis notification prevents Android stopping this app.</string>
    <string name="pref_notification_icon">Status bar icon</string>
    <string name="pref_notification_icon_summary">Style of the small status bar icon of the notification.</string>
    <string name="pref_notification_big_icon">Big status bar icon</string>
    <string name="pref_notification_big_icon_summary">Bigger icon in the status bar. You have to verify, if the icon is cut, if it gets to big.</string>
    <string name="pref_notification_no_content">Hide content</string>
    <string name="pref_notification_no_content_summary">The will remove the content of the notification, to have only a small notification with the related icon.</string>
    <string name="pref_second_notification">2. notification</string>
    <string name="pref_second_notification_summary">Show a second notification without content to have an additional icon in the status bar.</string>
    <string name="pref_second_notification_icon">2. status bar icon</string>
    <string name="pref_second_notification_icon_summary">Style of the small status bar icon of the second notification.</string>
    <string name="pref_floating_widget">Floating widget</string>
    <string name="pref_floating_widget_summary">Show glucose, trend, delta and time as floating widget.\nPlease also activate notification for preventing android to kill the app.</string>
    <string name="pref_floating_widget_size">Size</string>
    <string name="pref_floating_widget_size_summary">Change size of the floating widget</string>
    <string name="pref_floating_widget_style">Style</string>
    <string name="pref_floating_widget_style_summary">Style of the floating widget.</string>
    <string name="pref_floating_widget_transparency">Transparency</string>
    <string name="pref_floating_widget_transparency_summary">Background transparency for floating widget.</string>
    <string name="pref_widget_transparency">Widget transparency</string>
    <string name="pref_widget_transparency_summary">Background transparency for widgets.</string>
    <string name="pref_relative_time">Relative time</string>
    <string name="pref_relative_time_summary">Use relative time instead of glucose timestamp for widgets.\nRelative time depends on the battery settings on your device and may not work correct.</string>

    <string name="pref_status_bar_icon_app">App icon</string>
    <string name="pref_status_bar_icon_glucose">Glucose value</string>
    <string name="pref_status_bar_icon_trend">Trend arrow</string>
    <string name="pref_status_bar_icon_delta">Delta</string>

    <string name="pref_wear_notification">Wear: vibration</string>

    <string name="pref_global_broadcast">Global broadcast</string>

    <string name="select_receiver_show_all">Show all</string>
    <string name="select_receiver_no_glucodata_receiver">No receiver found!</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_group_github"  translatable="false">GitHub</string>
    <string name="menu_update">Updates</string>
    <string name="menu_support"  translatable="false">Support</string>
    <string name="menu_help">Help</string>

    <string name="help_link">https://github.com/pachi81/GlucoDataHandler/blob/master/README.md</string>
    <string name="update_link"  translatable="false">https://github.com/pachi81/GlucoDataHandler/releases</string>
    <string name="support_link"  translatable="false">https://github.com/pachi81/GlucoDataHandler/issues</string>

    <string name="widget_glucose">Glucose</string>
    <string name="widget_glucose_trend">Glucose and trend</string>
    <string name="widget_glucose_trend_delta">Glucose, trend and delta</string>
    <string name="widget_glucose_trend_delta_timestamp">Glucose, trend, delta and timestamp</string>
</resources>